<resources>
    <string name="app_name">Devdogs</string>
    <string name="app_name_kr">개발자들</string>
    <string name="app_logo">Logo</string>
    <string name="login_button">로그인</string>
    <string name="register_button">회원 가입</string>
    <string name="since">Since 2016</string>
    <string name="email_input">이메일</string>
    <string name="password_input">비밀번호</string>
    <string name="name_input">이름</string>
    <string name="match_password">비밀번호 확인</string>
    <string name="title_input">제목</string>
    <string name="content_input">내용</string>
    <string name="submit_button">등록하기</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_settings">설정</string>
    <string name="menu_logout">로그아웃</string>
</resources>
